--- a/public/css/project.css
+++ b/public/css/project.css
@@ -335,13 +335,58 @@
 }
 
 .rectangle {
-	width: 373px;
-	height: 221px;
-
+	width: 370px;
+	height: 100%;
 	background: #FFFFFF;
 	box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.1);
 	border-radius: 12px;
 	background-image: url('images/rectangle.png');
+	background-repeat: no-repeat; 
+	background-size: auto;
+}
+
+.project-overview {
+    width: 100%;
+    height: auto;
+    left: 960px;
+    top: 503px;
+
+    background: #FFFFFF;
+    border: 3px dashed #F4B41A;
+    box-sizing: border-box;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.1);
+    border-radius: 12px;
+}
+
+.project-overview-title {
+    padding-top: 40px;
+    padding-right: 40px;
+    padding-bottom: 0px;
+    padding-left: 40px;
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 40px;
+    line-height: 130%;
+    /* identical to box height, or 52px */
+    display: flex;
+    align-items: center;
+    color: #143E59;
+}
+
+.project-overview-description {
+    padding-top: 40px;
+    padding-right: 40px;
+    padding-bottom: 40px;
+    padding-left: 40px;
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 160%;
+    /* or 29px */
+
+    color: #0D171D;
 }
 
 .image-entry {
