--- a/public/css/project.css
+++ b/public/css/project.css
@@ -333,7 +333,7 @@
 
 .rectangle {
 	width: 370px;
-	height: 100%;
+	height: 225px;
 	background: #FFFFFF;
 	box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.1);
 	border-radius: 12px;
@@ -382,11 +382,9 @@
     color: #0D171D;
 }
 
-.image-entry {
-    padding-top: 80px;
-    padding-right: 50px;
-    padding-bottom: 80px;
-    padding-left: 50px;
+.img-entry {
+    width: 100%;
+    height: 225px;
 }
 
 .custom-btn a {
