--- a/public/css/project.css
+++ b/public/css/project.css
@@ -383,8 +383,14 @@
 }
 
 .img-entry {
-    width: 100%;
-    height: 225px;
+    width: 88%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-left: 50px;
+    height: 180px;
+    margin-top: 10px;
 }
 
 .custom-btn a {
