--- a/public/css/project.css
+++ b/public/css/project.css
@@ -333,7 +333,7 @@
 
 .rectangle {
 	width: 370px;
-	height: 225px;
+	height: 100%;
 	background: #FFFFFF;
 	box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.1);
 	border-radius: 12px;
@@ -382,15 +382,11 @@
     color: #0D171D;
 }
 
-.img-entry {
-    width: 88%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    margin-left: 50px;
-    height: 180px;
-    margin-top: 10px;
+.image-entry {
+    padding-top: 80px;
+    padding-right: 50px;
+    padding-bottom: 80px;
+    padding-left: 50px;
 }
 
 .custom-btn a {
