--- a/public/css/project.css
+++ b/public/css/project.css
@@ -333,7 +333,7 @@
 
 .rectangle {
 	width: 370px;
-	height: 100%;
+	height: 223px;
 	background: #FFFFFF;
 	box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.1);
 	border-radius: 12px;
