fix: contact us button hover text color

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -100,7 +100,7 @@ header ul .menu-btn a {
 }
 
 header ul .menu-btn a:hover {
-    color: #FFFFFF;
+    color: #FFFFFF !important;
     background: #143E5A;
 }
 
