--- a/public/merged.css
+++ b/public/merged.css
@@ -10536,7 +10536,7 @@ header ul .menu-btn a {
 }
 
 header ul .menu-btn a:hover {
-    color: #FFFFFF;
+    color: #FFFFFF !important;
     background: #143E5A;
 }
 
