--- a/public/css/team.css
+++ b/public/css/team.css
@@ -111,6 +111,14 @@
     margin-bottom: 70px;
 }
 
+.team_member_row img {
+    width: 100%;
+    border-top-right-radius: 12px;
+    border-top-left-radius: 12px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
 @media (max-width: 767px) {
 
     .team_member_row {
@@ -124,8 +132,6 @@
         margin-bottom: 40px;
     }
 }
-
-
 
 .team_member_row:hover {
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
@@ -210,7 +216,7 @@
     background-image: url(../images/cvcornerblue.png);
     top: 0%;
     background-repeat: no-repeat;
-    left: 78.5%;
+    right: 0;
     cursor: pointer;
     height: 39px;
 }
@@ -222,7 +228,7 @@
     background-image: url(../images/cvcornerblue.png);
     top: 0%;
     background-repeat: no-repeat;
-    left: 70.5%;
+    right: 0;
     cursor: pointer;
     height: 39px;
 }
@@ -234,7 +240,7 @@
     background-image: url(../images/cvcorneryellow.png);
     top: 0%;
     background-repeat: no-repeat;
-    left: 78.5%;
+    right: 0;
     cursor: pointer;
     height: 39px;
 }
@@ -246,7 +252,7 @@
     background-image: url(../images/cvcorneryellow.png);
     top: 0%;
     background-repeat: no-repeat;
-    left: 70.5%;
+    right: 0;
     cursor: pointer;
     height: 39px;
 }
