--- a/public/css/testiomanials.css
+++ b/public/css/testiomanials.css
@@ -57,34 +57,34 @@
     }
 }
 
-.testimonials-slider .slick-dots li button::before {
+.testimonials-slider .slick-dots li button:before {
     color: #A4A4A4;
     opacity: 1;
     font-size: 60px;
 }
 
-.testimonials-slider .slick-dots li.slick-active button::before {
+.testimonials-slider .slick-dots li.slick-active button:before {
     color: #143E5A;
     opacity: 1;
     font-size: 60px;
 }
 
 @media (max-width: 767px) {
-    .testimonials-slider .slick-dots li button::before {
+    .testimonials-slider .slick-dots li button:before {
         font-size: 50px;
     }
 
-    .testimonials-slider .slick-dots li.slick-active button::before {
+    .testimonials-slider .slick-dots li.slick-active button:before {
         font-size: 50px;
     }
 }
 
 @media (max-width: 479px) {
-    .testimonials-slider .slick-dots li button::before {
+    .testimonials-slider .slick-dots li button:before {
         font-size: 40px;
     }
 
-    .testimonials-slider .slick-dots li.slick-active button::before {
+    .testimonials-slider .slick-dots li.slick-active button:before {
         font-size: 40px;
     }
 }
@@ -179,138 +179,3 @@
 .testimonials_svg_txt_row>p {
     font-size: 14px;
 }
-
-
-
-/*
-
-@media (max-width: 767px){
-    #team {
-        padding-top: 80px;
-    }
-}
-
-@media (max-width: 479px){
-    #team {
-        padding-top: 60px;
-    }
-}
-
-
-
-
-.team_heder_txt_col>p {
-    font-size: 18px;
-    width: 590px;
-    margin: 45px auto;
-}
-
-@media (max-width: 767px){
-    .team_heder_txt_col>p {
-    font-size: 17px;
-    margin: 35px auto;
-    width: 100%;
-}
-}
-
-@media (max-width: 479px){
-    .team_heder_txt_col>p {
-    font-size: 16px;
-    margin: 25px auto;
-}
-}
-
-
-.members-slider .slick-dots li button::before {
-    color: #A4A4A4;
-    opacity: 1;
-    font-size: 60px;
-}
-
-
-.members-slider .slick-dots li.slick-active button::before {
-    color: #143E5A;
-    opacity: 1;
-    font-size: 60px;
-}
-
-@media (max-width: 767px){
-    .members-slider .slick-dots li button::before {
-        font-size: 50px;
-    }
-    
-    .members-slider .slick-dots li.slick-active button::before {
-        font-size: 50px;
-    }
-}
-
-@media (max-width: 479px){
-    .members-slider .slick-dots li button::before {
-        font-size: 40px;
-    }
-    
-    .members-slider .slick-dots li.slick-active button::before {
-        font-size: 40px;
-    }
-}
-
-
-.team_member_row {
-    background:white;
-    width: 76%;
-    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-    border-radius: 12px;
-    max-height: 330px;
-    margin: 0 auto;
-    margin-top:10px;
-    position: relative;
-    margin-bottom: 70px;
-}
-
-@media (max-width: 767px){
-    
-    .team_member_row {
-        margin-bottom: 50px;
-    }
-}
-
-@media (max-width: 479px){
-    .team_member_row {
-        width: 60%;
-        margin-bottom: 40px;
-    }
-}
-
-
-
-.team_member_row:hover {
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-  }
-
-.team_member_row>h4 {
-    font-weight: 600;
-    font-size: 18px;
-    z-index:6;
-    position: relative;
-
-}
-
-.team_member_row>p {
-    font-size: 18px;
-    z-index:6;
-    position: relative;
-}
-
-.aqua_layer {
-    width: 100%;
-    height: 100px;
-    background-color: #CCEAFE;
-    position: absolute;
-    bottom: 0;
-    border-radius: 12px;
-    -moz-transform: rotate(-10deg);
-    -ms-transform: rotate(-10deg);
-    -webkit-transform: rotate(-10deg);
-    -o-transform: rotate(-10deg);
-    
-} */
