--- a/public/css/team.css
+++ b/public/css/team.css
@@ -192,21 +192,28 @@
 }
 
 
-.layer {
+.col-md-4 .layer {
+    width: 100%;
+    height: 32%;
+    position: absolute;
+    bottom: -17.5px;
+    border-radius: 12px;
+    -moz-transform: rotate(-10deg);
+    -ms-transform: rotate(-10deg);
+    -webkit-transform: rotate(-10deg);
+    -o-transform: rotate(-10deg);
+}
+
+.col-md-3 .layer {
     width: 100%;
     height: 33%;
     position: absolute;
-    bottom: 0;
+    bottom: -7.5px;
     border-radius: 12px;
     -moz-transform: rotate(-10deg);
-    /* Для Firefox */
     -ms-transform: rotate(-10deg);
-    /* Для IE */
     -webkit-transform: rotate(-10deg);
-    /* Для Safari, Chrome, iOS */
     -o-transform: rotate(-10deg);
-    /* Для Opera */
-
 }
 
 .cv_corner_blue {
