--- a/public/css/header.css
+++ b/public/css/header.css
@@ -64,7 +64,6 @@ header ul li a {
     font-size: 16px;
 }
 
-
 @media (max-width: 1199px) {
     header ul li a {
         font-size: 15px;
@@ -78,11 +77,9 @@ header ul li a {
 
 header ul li a:hover {
     text-decoration: none;
-    color: #0D171D;
+    color: #143E59;
     position: relative;
-    text-shadow: 0.8px 0 #0D171D;
-    transition: 0.5s;
-
+    font-weight: bolder;
 }
 
 header ul .menu-btn {
