--- a/public/css/qa.css
+++ b/public/css/qa.css
@@ -79,7 +79,7 @@
 
 }
 
-
+/*
 .QA_text_row {
     margin-bottom: 45px;
 }
@@ -89,7 +89,7 @@
         margin-bottom: 25px;
     }
 
-}
+} */
 
 
 .QA_h5 {
