--- a/public/css/education.css
+++ b/public/css/education.css
@@ -481,7 +481,7 @@
     color: #143E59;
     font-size: 35px;
     font-weight: 700;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'OpenSans-Regular', sans-serif;
 }
 
 .most_view_box {
@@ -517,7 +517,7 @@
 .all_section_title .all_title1 {
     font-size: 36px;
     font-weight: 700;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'OpenSans-Regular', sans-serif;
     margin-bottom: 30px;
 }
 
