--- a/public/css/bootstrapCss/bootstrap.css
+++ b/public/css/bootstrapCss/bootstrap.css
@@ -62,6 +62,17 @@ body {
   text-align: left;
   background-color: #fff;
 }
+.img-fluid {
+  border-radius: 20px;
+}
+
+html, body {
+  margin:0;
+  padding:0;
+  width:100%;
+  height:100%;
+  overflow: auto;
+}
 
 [tabindex="-1"]:focus {
   outline: 0 !important;
@@ -4205,7 +4216,6 @@ input[type="button"].btn-block {
 }
 
 .navbar-nav .dropdown-menu {
-  position: static;
   float: none;
 }
 
