--- a/public/css/project.css
+++ b/public/css/project.css
@@ -406,3 +406,16 @@
 	box-sizing: border-box;
 	border-radius: 6px;"
 }
+
+@media (max-width: 360px) {
+
+    .custom-btn a {
+        font-size: 14px;
+        padding: 12px 30px;
+    }
+    
+    html, body {
+        max-width: 100%;
+        overflow-x: hidden;
+    }
+}
