--- a/public/css/project.css
+++ b/public/css/project.css
@@ -407,6 +407,38 @@
 	border-radius: 6px;"
 }
 
+@media (max-width: 320px) {
+
+    .custom-btn a {
+        font-size: 14px;
+        padding: 12px 30px;
+    }
+
+    .img-entry {
+        position: relative;
+        top: 35px;
+        left: 35px;
+        width: 78%;
+        height: 95px;
+    }
+
+    .rectangle {
+        width: 200px;
+        height: 150px;
+        background: #FFFFFF;
+        box-shadow: 0px 0px 25px rgb(0 0 0 / 10%);
+        border-radius: 12px;
+        background-image: url(images/rectangle.png);
+        background-repeat: no-repeat;
+        background-size: 195px 146px;
+    }
+    
+    html, body {
+        max-width: 100%;
+        overflow-x: hidden;
+    }
+}
+
 @media (max-width: 360px) {
 
     .custom-btn a {
