--- a/public/css/job_apply.css
+++ b/public/css/job_apply.css
@@ -200,11 +200,12 @@
      left: 36px;
      top: -12px;
      background-color: #fff;
-     text-align: center;
+     text-align: left;
      color: #A5A5A5;
      padding-left: 15px;
      padding-right: 15px;
      height: 14px;
+     line-height: 1;
  }
 
 
